# pc-ble-driver

examples/heart_rate_collector/: CMakeLists.txt  main.c
